--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "penplot-stroke",
   "version": "1.1.0",
   "description": "A helper algorithm for pen plotting strokes with variable thicknesses and properties based off a fixed pen tip size",
-  "main": "penplot-stroke.js",
+  "main": "build.js",
   "dependencies": {
     "dependencies": "0.0.1",
     "line-intersection": "git+https://github.com/Evelios/line-Intersection.git",
     "new-array": "^1.0.0",
-    "vector": "https://github.com/Evelios/Vector.git"
+    "vector": "git+https://github.com/Evelios/Vector.git"
   },
   "devDependencies": {
     "rollup": "^0.63.5",
